# cortex-dis

./: FORK_ANCESTOR.md  Makefile  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 0013_atlas_schema_drafts.py
docs/: decisions.md
libs/dis-core/src/dis_core/: errors.py
libs/dis-core/tests/unit/: test_errors.py
libs/dis-validation/src/dis_validation/: __init__.py  provenance.py
libs/dis-validation/tests/unit/: test_provenance.py
schemas/postgres/atlas/: schema_drafts.sql
services/dis-ui/: .env.example  package.json  pnpm-lock.yaml
services/dis-ui-server/: API_CONTRACT.md  CLAUDE.md  pyproject.toml
services/dis-ui-server/src/dis_ui_server/: api.py  config.py  errors_http.py  main.py
services/dis-ui-server/tests/: conftest.py
services/dis-ui-server/tests/integration/: test_atlas_draft_store.py
services/dis-ui-server/tests/unit/: test_atlas.py  test_auth.py  test_me_roles.py  test_profiler.py  test_proposer.py  test_super_admin_cm_resolution.py  test_upload_stream_asgi.py
services/dis-ui/src/: App.test.tsx
services/dis-ui/src/auth/: AtlasBoundary.test.tsx  AtlasBoundary.tsx  Auth0Config.ts  AuthBoundary.test.tsx  AuthBoundary.tsx  authMode.ts  (+10 more)
tools/codegen/: README.md  pyproject.toml
tools/codegen/fixtures/: retail_store_sku_current_position.ir.yaml
tools/codegen/src/dis_codegen/: __init__.py  draft_ir.py  generate.py  ir.py  reflect.py
tools/codegen/tests/fixtures/retail_csvs/: inventory_store12.csv  posdump_acme.csv
tools/codegen/tests/unit/: test_draft_ir.py  test_generate_store_sku_current_position.py  test_ir_loader.py
(+48 files in other folders)
