[project]
name = "dis-codegen"
version = "0.0.0"
description = "Atlas IR-to-artifacts generator (phase A1 core). Reads the canonical-schema IR and emits the dis-canonical-equivalent Pydantic model, the dis_validation provenance partition, and the IR-expressible DDL subset. Logical ownership: Cortex/Atlas (ADR-ATLAS-001 decision 2 as amended); hosted here because it imports the Python models to reconcile and emits Python."
requires-python = ">=3.12"
dependencies = [
  # The shared constrained-type aliases + enums the generated model references,
  # and the live StoreSkuCurrentPosition the prover reconciles against.
  "dis-canonical",
  # ColumnProvenance + the five-way partition drift guard the generated partition
  # must satisfy (prover seam).
  "dis-validation",
  # IR document parsing (YAML).
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dis_codegen"]
